projects/vb6parse/snapshots/syntax/library/statements/stop/stop_case_insensitive.snap
---
source: projects/vb6parse/src/syntax/library/statements/system_interaction/stop.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: StopStatement
      children:
        - kind: StopKeyword
          text: stop
    - kind: Newline
      text: "\n"
